ipc/ipdl/test/ipdl/error/array_Recursive.ipdl
protocol array_Recursive {
child: async Msg(int[][] aa);
};
